<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Calculadora!"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/val1"
        android:layout_width="237dp"
        android:layout_height="76dp"
        android:layout_marginTop="36dp"
        android:hint="Valor 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logText" />

    <EditText
        android:id="@+id/val2"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginTop="48dp"
        android:hint="Valor 2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val1" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginTop="31dp"
        android:textAlignment="center"
        android:hint="Resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val2"
        />


    <Button
        android:id="@+id/Sumar"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="27dp"
        android:text="Sumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultado"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Restar"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:text="Restar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sumar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Limpiar"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:text="Limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Restar"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>